fix some align issues in fixed table

--- a/assets/index.less
+++ b/assets/index.less
@@ -9,6 +9,7 @@
   color: @text-color;
   transition: opacity 0.3s ease;
   position: relative;
+  line-height: 1.5;
 
   .@{tablePrefixCls}-scroll {
     overflow: auto;
@@ -17,6 +18,7 @@
   .@{tablePrefixCls}-fixed {
     th, td {
       height: 18px;
+      white-space: nowrap;
     }
   }
 
